# nox_to_csv_converter

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
scripts/: build_exe.py
src/nox_csv_extractor/: __init__.py  gui.py  nox.py
tests/: test_extractor.py
