[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nox-to-csv"
version = "0.1.0"
description = "Simple converter for Metrohm NOVA .nox files to CSV."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "nox-to-csv contributors"}]
keywords = ["nox", "nova", "metrohm", "csv", "electrochemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
exe = ["pyinstaller>=6.0"]

[project.scripts]
nox-to-csv = "nox_csv_extractor.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
